[gd_scene load_steps=16 format=3 uid="uid://l6eil8v1n048"]

[ext_resource type="Texture2D" uid="uid://chu50h46jf4r3" path="res://assets/textures/idle.png" id="1_80516"]
[ext_resource type="Script" uid="uid://dofdoqla4hrg4" path="res://player/player.gd" id="1_cxr5p"]
[ext_resource type="Shader" uid="uid://b7rugnqrvw65n" path="res://player/PlayerHitFlash.gdshader" id="1_tdg3f"]
[ext_resource type="Texture2D" uid="uid://c6em1w572b6a2" path="res://assets/textures/jump.png" id="2_jqaj3"]
[ext_resource type="Texture2D" uid="uid://dnbr4fqynnado" path="res://assets/textures/left.png" id="3_y03ms"]
[ext_resource type="Texture2D" uid="uid://b5436m4uu1gdg" path="res://assets/textures/right.png" id="4_pkoub"]

[sub_resource type="Curve" id="Curve_cxr5p"]
_data = [Vector2(0, 0), 0.0, 0.18752, 0, 1, Vector2(0.532498, 0.0998538), 0.174866, 0.174866, 0, 0, Vector2(0.653203, 0.255723), 0.0, 0.0, 0, 0, Vector2(0.783194, 1), 0.0164589, 0.0164589, 0, 0, Vector2(1, 1), -0.181004, 0.0, 0, 0]
point_count = 5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tdg3f"]
shader = ExtResource("1_tdg3f")
shader_parameter/active = false
shader_parameter/tint = Color(1, 0, 0, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_e80uo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_80516")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jqaj3")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_y03ms")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_pkoub")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cxr5p"]
size = Vector2(231, 239)

[sub_resource type="CanvasTexture" id="CanvasTexture_tdg3f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dtqjt"]
size = Vector2(272, 93)

[sub_resource type="Animation" id="Animation_tdg3f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dtqjt"]
resource_name = "hitflash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ncpa"]
_data = {
&"RESET": SubResource("Animation_tdg3f"),
&"hitflash": SubResource("Animation_dtqjt")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
use_parent_material = true
position = Vector2(1, 0)
scale = Vector2(0.8, 0.8)
script = ExtResource("1_cxr5p")
jump_curve = SubResource("Curve_cxr5p")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_tdg3f")
sprite_frames = SubResource("SpriteFrames_e80uo")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 0.5)
shape = SubResource("RectangleShape2D_cxr5p")

[node name="Area2D" type="Area2D" parent="."]
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
visible = false
modulate = Color(1, 0.219608, 0, 1)
position = Vector2(228, 3.5)
scale = Vector2(268, 87)
texture = SubResource("CanvasTexture_tdg3f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(231, 3.5)
shape = SubResource("RectangleShape2D_dtqjt")
disabled = true

[node name="Timer" type="Timer" parent="Area2D"]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5ncpa")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)
limit_left = -1000000
drag_horizontal_enabled = true
drag_vertical_enabled = true

[connection signal="hit" from="." to="." method="_on_hit"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Area2D/Timer" to="." method="_on_timer_timeout"]
